guestbook/calico-objects/route-eg.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: guestbook-ui
spec:
  parentRefs:
    - name: eg
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: guestbook-ui
          namespace: default
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
